--- a/src/locale/srb2.pot
+++ b/src/locale/srb2.pot
@@ -2239,8 +2239,8 @@ msgstr ""
 
 #: m_menu.c:2174
 msgid ""
-"What would Tails say if\n"
-"he saw you quitting the game?\n"
+"What would Trip say if\n"
+"she saw you quitting the game?\n"
 "\n"
 "(Press 'Y' to quit)"
 msgstr ""
@@ -2264,8 +2264,8 @@ msgstr ""
 #: m_menu.c:2177
 msgid ""
 "You're trying to say you\n"
-"like Sonic 2K6 better than\n"
-"this, right?\n"
+"like Duke Nukem Forever better\n"
+"than this, right?\n"
 "\n"
 "(Press 'Y' to quit)"
 msgstr ""
@@ -2304,8 +2304,8 @@ msgstr ""
 #: m_menu.c:2183
 msgid ""
 "Don't quit!\n"
-"There are animals\n"
-"to save!\n"
+"There's a ruby\n"
+"to nab!\n"
 "\n"
 "(Press 'Y' to quit)"
 msgstr ""
@@ -2344,7 +2344,7 @@ msgstr ""
 
 #: m_menu.c:2188
 msgid ""
-"Hit the 'N' key, Sonic!\n"
+"Hit the 'N' key, Fang!\n"
 "The 'N' key!\n"
 "\n"
 "(Press 'Y' to quit)"
